<resources>
    <string name="time_error">时间有问题</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="app_name">易家教</string>
    <string name="title_OK">确定</string>
    <string name="my_forum">我的帖子</string>
    <string name="no_login">未登录</string>
    <string name="text_login">登录</string>
    <string name="text_notice">使用第三方账号登陆后,仍需要绑定手机号</string>
    <string name="text_login_hint">点击这里进入登陆界面</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_phone_user_hint">请输入您的手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_string">登录</string>
    <string name="register_string">新用户注册</string>
    <string name="text_register">注册</string>
    <string name="login_thirdparty_string">第三方登录</string>
    <string name="login_forget_password_string">忘记密码</string>
    <string name="send">发送验证码</string>
    <string name="send_message">发送</string>
    <string name="confirm">确定</string>
    <string name="finish">刷新</string>
    <string name="submit">提交</string>
    <string name="binding_string">第三方绑定</string>
    <string name="complete">完成</string>
    <string name="text_save">保存</string>
    <string name="distance">距离</string>
    <string name="comment_order">去评价</string>
    <string name="successed">已完成</string>
    <string name="nothing">换个关键词试试吧~</string>
    <string name="agree_order">同意</string>
    <string name="close_order">拒绝</string>
    <string name="verification_code">请输入验证码(6位)</string>
    <string name="text_password">请输入密码(6~12位)</string>
    <string name="text_repassword">请再次输入密码(6~12位)</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_my_head">我的头像</string>
    <string name="text_next_step">下一步</string>
    <string name="text_child_birthday">孩子生日：</string>
    <string name="text_my_birthday">我的生日:</string>
    <string name="text_my_age">我的年龄:</string>
    <string name="text_my_sex">我的性别:</string>
    <string name="text_study_school">就读学校：</string>
    <string name="text_my_collect">我的收藏</string>
    <string name="text_my_posts">我的帖子</string>
    <string name="text_my_issue">我的发布</string>
    <string name="forum_new">最新</string>
    <string name="forum_hot">最热</string>
    <string name="forum_essence">精华</string>
    <string name="text_my_participation">我的参与</string>
    <string name="text_card_top">置顶</string>
    <string name="text_card_delete">删除</string>
    <string name="text_my_upload">我的上传</string>
    <string name="text_sys_message">系统消息</string>
    <string name="text_about_our">关于我们</string>
    <string name="text_binding">第三方账号绑定</string>
    <string name="text_setting">设置</string>
    <string name="text_check_update">检查更新</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="text_input_study_school">请输入就读学校</string>
    <string name="text_graduate_school">毕业或在读院校:</string>
    <string name="graduate_school">毕业学校:</string>
    <string name="text_graduate_time">毕业时间:</string>
    <string name="text_graduate_major">所学专业:</string>
    <string name="text_input_graduate_time">2011/7/2</string>
    <string name="text_education_degree">学历:</string>
    <string name="text_degree">最高学历:</string>
    <string name="text_input_education_degree">本科</string>
    <string name="text_input_major">请输入专业</string>
    <string name="text_major">专业:</string>
    <string name="text_write_assess">写评价(不支持表情输入)*100个字以内</string>
    <string name="text_comment">评价</string>
    <string name="text_word_number">0</string>
    <string name="text_total_word_number">/100</string>
    <string name="text_personal_resume">个人简介</string>
    <string name="text_my_name">我的姓名:</string>
    <string name="text_input_my_name">请输入姓名(不支持表情输入)</string>
    <string name="text_identity_info">身份信息:</string>
    <string name="text_fulltime">易家教专职签约教师</string>
    <string name="text_identify_idcord">已核实该老师实名认证</string>
    <string name="text_verify_info">已核实该老师电话、地址等信息</string>
    <string name="text_input_identity_info">上传手持证件照</string>
    <string name="text_address">地址:</string>
    <string name="text_address1">所在地址</string>
    <string name="text_address2">所在地址(必填)</string>
    <string name="text_input_address">请输入地址或使用定位</string>
    <string name="text_contact_info">联系方式:</string>
    <string name="text_contact_info_hint">请输入联系方式</string>
    <string name="text_input_contact_info">联系方式</string>
    <string name="text_uploading">上传证书</string>
    <string name="text_select_pic">选择\t照片</string>
    <string name="text_voice_down">按下\t说话</string>
    <string name="text_voice_up">松开\t结束</string>
    <string name="text_voice_cancel">松开\t取消</string>
    <string name="text_cancel">上滑手指\t取消发送</string>
    <string name="account">账户：</string>
    <string name="new_password">新密码：</string>
    <string name="ensure_new_password">确认密码：</string>
    <string name="password_format_hint">请输入6~12个字符</string>
    <string name="forget_password">忘记密码</string>
    <string name="text_input_realname_hint">请输入真实姓名(不支持表情输入)*必填</string>
    <string name="text_choose_identity">身份选择</string>
    <string name="choice_location">选择城市</string>
    <string name="selected_city">当前位置:正在定位…</string>
    <string name="choice_education">选择学历</string>
    <string name="choice_sex">选择学历</string>
    <string name="choice_setting">设置</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_back">意见反馈</string>
    <string name="text_choose_parents">学生</string>
    <string name="text_choose_teacher">教师</string>
    <string name="text_order_sender">预约创建人:</string>
    <string name="text_order_statu">预约状态:</string>
    <string name="text_order_instantane">【预约快照】</string>
    <string name="text_order_receiver">预约接收人:</string>
    <string name="text_choose_sex_m">男</string>
    <string name="text_choose_sex_w">女</string>
    <string name="text_assess_time">2014/8/18</string>
    <string name="text_assess_info">评价内容……</string>
    <string name="text_class_fees">课时费:</string>
    <string name="text_negotiable">面议</string>
    <string name="text_class_fees2">面议不填</string>
    <string name="text_class_fees1">课时费用:</string>
    <string name="text_class_fees_unit">元/小时</string>
    <string name="text_lecture_unit">次/周</string>
    <string name="text_per">60</string>
    <string name="text_unit">元/小时</string>
    <string name="text_refer_subject">求教科目:</string>
    <string name="text_student_need_subject">英语口语</string>
    <string name="text_child_subject">智力开发</string>
    <string name="text_lecture_count">授课次数:</string>
    <string name="text_lecture_mode">授课方式:</string>
    <string name="text_lecture_mode1">授课方式</string>
    <string name="text_mode_1">不限</string>
    <string name="text_mode_2">家教上门</string>
    <string name="text_mode_3">学生上门</string>
    <string name="text_mode_4">附近公共场所</string>
    <string name="text_lecture_area">授课区域:</string>
    <string name="text_lecture_area1">授课区域</string>
    <string name="text_teaching_mode">教学模式:</string>
    <string name="text_teaching_mode1">教学模式</string>
    <string name="text_if_listening">可否试听:</string>
    <string name="text_listening_choose">可否试听</string>
    <string name="text_teacher_sex">教师性别:</string>
    <string name="text_lecture_time">授课时间段(手指点按即可选择)</string>
    <string name="text_lecture_times">授课时间:</string>
    <string name="text_order_number">预约编号:</string>
    <string name="text_lecture_subject1">授课科目:</string>
    <string name="lecture_count">1/周</string>
    <string name="lecture_mode">一对一</string>
    <string name="teaching_mode">家教上门</string>
    <string name="text_lecture_subject">辅导科目:</string>
    <string name="forum_fabu">我的发布:</string>
    <string name="text_subject">科目</string>
    <string name="text_subject1">科目1</string>
    <string name="text_subject2">科目2</string>
    <string name="text_subject3">科目3</string>
    <string name="text_area">区域</string>
    <string name="text_lecture_subjects">小学数学</string>
    <string name="text_teacher_name">教师姓名:</string>
    <string name="text_parent_name">学生姓名:</string>
    <string name="text_teacher_age">辅导教龄:</string>
    <string name="forum_collect">我的收藏:</string>
    <string name="text_teaching_age_1">一年以内</string>
    <string name="text_teaching_age_2">1~3年</string>
    <string name="text_teaching_age_3">3~5年</string>
    <string name="text_teaching_age_4">5~10年</string>
    <string name="text_teaching_age_5">10年以上</string>
    <string name="text_age">年龄:</string>
    <string name="text_lecture_count_unit">次</string>
    <string name="text_setting_course_info">设置课程信息</string>
    <string name="text_other_info">其他信息</string>
    <string name="text_filter_price">价格</string>
    <string name="text_filter_seniority">教龄</string>
    <string name="text_filter_authenticate">认证</string>
    <string name="text_filter_appraise">评价</string>
    <string name="text_filter_new">最新</string>
    <string name="text_other_assess">他人评价:</string>
    <string name="text_assess_info_homepage">( 评价详情</string>
    <string name="text_setting_person_info">设置个人信息</string>
    <string name="right_bracket"> )</string>
    <string name="text_studnet_need_title">学生需求标题</string>
    <string name="text_introduce">自我介绍:</string>
    <string name="text_write_introduce">自我介绍一下吧……(不支持表情输入)*100个字以内</string>
    <string name="text_assess">自我评价:</string>
    <string name="text_look_assess">查看评价</string>
    <string name="text_teacher_assess">点评 </string>
    <string name="text_student_assess">点评 </string>
    <string name="text_info">不支持表情输入</string>
    <string name="text_infos">详细内容</string>
    <string name="text_courser_time">课程时间</string>
    <string name="text_courser_info">课程信息</string>
    <string name="text_yes">可以</string>
    <string name="text_no">不可以</string>
    <string name="close">关闭</string>
    <string name="open">重新打开</string>
    <string name="text_setting_register_info">设置个人信息</string>
    <string name="text_perfection_info">完善个人信息</string>
    <string name="text_pesonal_home">个人主页</string>
    <string name="text_home">主页</string>
    <string name="text_qualification_authentication">资格认证</string>
    <string name="text_choose">请选择</string>
    <string name="text_all">全部</string>
    <string name="text_sex">性别:</string>
    <string name="text_history_record">历史发布记录</string>
    <string name="text_next">跳过</string>
    <string name="text_cancle">取消</string>
    <string name="text_camera">拍照</string>
    <string name="text_gallery">图库</string>
    <string name="text_binding_sina">新浪微博绑定</string>
    <string name="text_binding_qq">QQ账号绑定</string>
    <string name="text_share_1_weixin_friend">发送给朋友</string>
    <string name="text_share_2_weixin_circle">发送到朋友圈</string>
    <string name="text_share_3_qq_friend">发送给好友</string>
    <string name="text_share_4_qq_qzone">Qzone</string>
    <string name="text_share_5_weibo">微博</string>
    <string name="text_share">分享</string>
    <string name="text_share_ok">分享成功</string>
    <string name="text_share_cancel">分享取消</string>
    <string name="text_share_fail">分享失败</string>
    <string name="text_deal_ok">支付成功</string>
    <string name="text_deal_cancel">支付取消</string>
    <string name="text_first_lecture_time">首次授课时间:</string>
    <string name="text_order_status_1">待确认</string>
    <string name="text_order_status_2">已确认</string>
    <string name="text_order_status_3">待评价</string>
    <string name="text_order_status_4">已评价</string>
    <string name="text_order_status_5">已拒绝</string>
    <string name="text_no_info">暂无信息</string>
</resources>