<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <include layout="@layout/main_head_bar" />

    <EditText
        android:id="@+id/et_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_bg_normal"
        android:singleLine="true"
        android:inputType="phone"
        android:hint="@string/login_phone_user_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10" >

        <EditText
            android:id="@+id/et_test_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="number"
            android:maxLines="6"
            android:background="@drawable/edit_bg_normal"
            android:hint="@string/verification_code" />

        <Button
            android:id="@+id/btn_register_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_5"
            android:background="@drawable/selector_button_register"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_get_code"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_bg_normal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_16"
            android:gravity="center_vertical"
            android:text="@string/new_password"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_format_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_bg_normal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensure_new_password"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_setting_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_format_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_5"
         android:layout_marginRight="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/selector_button_register"
        android:text="@string/submit"
        android:textColor="@color/button_text_color" />

</LinearLayout>